# CalculationOfNormHeatFluxBeta

./: README.md
Calculation_of_thermal_insulation/: CMakeLists.txt  Functions.cpp  Functions.h  SourceData.cpp  SourceData.h  charts.cpp  charts.h  charts.ui  checkheat.cpp  checkheat.h  checkheat.ui  closestelementsintables.cpp  closestelementsintables.h  exponentialfitting.cpp  exponentialfitting.h  findlambda.cpp  findlambda.h  findlambda.ui  lamdadialog.cpp  lamdadialog.h  lamdadialog.ui  linearregression.cpp  linearregression.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  normheatfluxdensity.cpp  normheatfluxdensity.h  normheatfluxdensity.ui  resources.qrc
